--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,6 @@
 body {
   background-color: #FFFFFF;
-  font-family: times;
+  font-family: 'Source Serif Pro', serif;
   font-size: 11pt;
   width: 600px;
   margin-left:50px;
