--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,17 +1,27 @@
 body {
   background-color: #FFFFFF;
-  font-family: 'Libre Baskerville', serif;
-  line-height: 1.1;
-  font-weight: 400;
+  font-family: 'EB Garamond', serif;
+  line-height: initial;
+  letter-spacing: 0.5px;
+  font-size: 0.95em;
 }
 
 nav {
   padding-bottom: 10px;
 }
 
+nav li{
+  display:inline;
+  margin-right: 10px;
+}
+
+nav ul{
+  padding-left: 0px;
+}
+
 h1 {
-  font-size:2.2em;
-  font-style:italic;
+  font-size:43px;
+  text-transform: capitalize;
   line-height: normal;
   letter-spacing: 1pt;
   font-weight: normal;
@@ -19,21 +29,25 @@ h1 {
 
 nav a {
   text-decoration: underline;
-  text-transform: lowercase;
+  text-transform: capitalize;
   color: #000000;
 }
 
 nav a:hover, a:focus{
   background-color: #0D1A80;
   color:#FFFFFF;
+  top: -20px;
 }
 
 a.skiplink{
-  display: none;
+  position: relative;
+    top: -80px;
+    transition: top ease-in 0.3s;
 }
 
-a.skiplink:focus{
+a.skiplink:focus, a.skiplink:active{
   display: inline;
+  top: -20px;
 }
 
 .current{
@@ -54,7 +68,8 @@ a.skiplink:focus{
 }
 
 #container{
-  max-width: 600px;
+  width: 600px;
+  margin: 20px 0px 0px 100px;
   position: relative;
 }
 
