--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,3 +76,22 @@ a.skiplink:focus, a.skiplink:active{
 #main{
 
 }
+
+#gallery{
+  display: grid;
+  grid-template: 300px 300px 300px / 300px 300px 300px;
+  grid-gap: 20px;
+  align-items: center;
+}
+
+#gallery>img {
+  width:100%;
+  height:100%;
+}
+
+.bg-image
+{
+  background-image: url("/images/oppbg.png");
+  background-position: right bottom;
+  background-attachment: fixed;
+}
